Closed
Bug 21189
Opened 26 years ago
Closed 26 years ago
[PP]First document node gets duplicate with timer-based notifications on
Categories
(Core :: Layout, defect, P3)
Tracking
()
VERIFIED
FIXED
M12
People
(Reporter: sfraser_bugs, Assigned: vidur)
References
()
Details
(Whiteboard: [HAVE FIX])
Attachments
(1 file)
|
214 bytes,
text/html
|
Details |
With the timer-based content sink notifications on, I see that on some pages, the
first node in the document gets duplicated. With the URL above, I see
Internal linksInternal links
Editor
...etc.
| Reporter | ||
Updated•26 years ago
|
| Reporter | ||
Comment 1•26 years ago
|
||
Turning off the content timer pref fixes the problem.
| Assignee | ||
Comment 2•26 years ago
|
||
In an attempt to get my bug list in order again, marking all the bugs I have
currently as ASSIGNED.
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → WORKSFORME
| Assignee | ||
Comment 3•26 years ago
|
||
Simon, I can't seem to reproduce this one on Windows with the default interval
(1 second). If this still happens for you, please reopen and provide your timer
values.
| Reporter | ||
Updated•26 years ago
|
Status: RESOLVED → REOPENED
| Reporter | ||
Comment 4•26 years ago
|
||
I see the duplicated node with a wide range of timer prefs, as long as
"content.notify.ontimer" is on.
| Reporter | ||
Updated•26 years ago
|
Resolution: WORKSFORME → ---
| Reporter | ||
Comment 5•26 years ago
|
||
Still a problem.
| Reporter | ||
Comment 6•26 years ago
|
||
This appears to be Mac-only. Hrrmm.
Comment 8•26 years ago
|
||
I've noticed this happen to me three different times on linux. Each time was
on the startup page (http://www.mozilla.org/). Twice it happened on the first
run after a new compile and the other time was the first run after installing
a new daily build. Each time a different link was repeated. Is the first node
in the document going to be different each time its loaded? I don't think the
web page changed. see bug 21370 for a screen shot.
Comment 10•26 years ago
|
||
| Assignee | ||
Comment 11•26 years ago
|
||
I can't reproduce on my machine with any of the test cases. If anyone with a
debug build on their machine can reproduce this consistently, please let me
know.
Updated•26 years ago
|
Hardware: All → Macintosh
Summary: First document node gets duplicate with timer-based notifications on → [PP]First document node gets duplicate with timer-based notifications on
Comment 12•26 years ago
|
||
I added PP to summary since this appears to only happen on Mac. I have not been
able to reproduce this problem on Win 98 or Redhat 6.0.
Comment 13•26 years ago
|
||
Are you sure this should be PP? As I said, this happens to me on linux
(RH6.1). And never with the first element.
| Reporter | ||
Updated•26 years ago
|
Target Milestone: M12
| Reporter | ||
Comment 14•26 years ago
|
||
Here's a diff: note LL_CMP changes, which work around an NSPR bug on compilers
which don't have long long support enabled (bug to be filed).
Index: nsHTMLContentSink.cpp
===================================================================
RCS file: /cvsroot/mozilla/layout/html/document/src/nsHTMLContentSink.cpp,v
retrieving revision 3.285
diff -r3.285 nsHTMLContentSink.cpp
1860a1861,1863
>
> mTextLength = 0;
> didFlush = PR_TRUE;
1892a1896,1898
> mTextLength = 0;
> didFlush = PR_TRUE;
>
1896,1897d1901
< mTextLength = 0;
< didFlush = PR_TRUE;
2224c2228
< if (LL_CMP(diff, >=, interval)) {
---
> if (LL_CMP(diff, >, interval)) {
3756c3760
< if (LL_CMP(diff, >=, interval)) {
---
> if (LL_CMP(diff, >, interval)) {
| Assignee | ||
Updated•26 years ago
|
Whiteboard: [HAVE FIX]
| Reporter | ||
Updated•26 years ago
|
Status: REOPENED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 15•26 years ago
|
||
Fix checked in.
Comment 16•26 years ago
|
||
I designed LL_CMP back in NSPR 1.0 daze to work only for < and >, and commented
that fact. It seems my comments were removed -- not that they would do enough
good! Anyway, the efficiency win is enough to make this restriction on LL_CMP a
feature; but it does need to be documented and checked.
In hindsight, I should have purveyed just LL_LT and LL_GT, so no one would fall
into the trap of passing <= or >= (of course, no one pases == or * or % or ...;
you have to read the source before you use an ALL_CAPS macro, to be sure you are
using it correctly).
wtc, you want a bug asking for a comment, if not LL_LT and LL_GT macros and a
deprecated, underlying LL_CMP?
/be
Comment 17•26 years ago
|
||
so for performance reasons, you don't want me to fix
LL_CMP so that you can pass <= or >= to it?
| Reporter | ||
Comment 18•26 years ago
|
||
Note: bug 21428 has been filed on the LL_CMP issue. Please take that discusson
there.
Comment 19•26 years ago
|
||
*** Bug 21333 has been marked as a duplicate of this bug. ***
Comment 20•26 years ago
|
||
*** Bug 21333 has been marked as a duplicate of this bug. ***
Comment 21•26 years ago
|
||
*** Bug 21513 has been marked as a duplicate of this bug. ***
Updated•26 years ago
|
Status: RESOLVED → VERIFIED
Comment 22•26 years ago
|
||
Fixed in the Dec 13th build (1999121314).
You need to log in
before you can comment on or make changes to this bug.
Description
•