Fix for bug 21189; first node's content was duplicated with timer-based notifications on. Fix by vidur, r=smfr, a=brendan. Also work around a problem with LL_CMP macros on compilers that don't use long long (NSPR bug 21428).